--- a/SSK_ERP/SSK_ERP/Views/SalesReportItemwise/Index.cshtml
+++ b/SSK_ERP/SSK_ERP/Views/SalesReportItemwise/Index.cshtml
@@ -110,7 +110,7 @@
         border: none;
         font-size: 13px;
         border-right: 1px solid rgba(255, 255, 255, 0.35);
-        white-space: nowrap;
+        white-space: normal;
     }
 
     #sriTable thead th:last-child {
@@ -155,6 +155,16 @@
     .dataTables_wrapper .dataTables_filter label,
     .dataTables_wrapper .dataTables_length label {
         margin-bottom: 0;
+    }
+
+    .slr-body .table-responsive {
+        overflow-x: visible;
+    }
+
+    #sriTable thead th,
+    #sriTable tbody td {
+        white-space: normal;
+        word-break: break-word;
     }
 
     .select2-container--default .select2-selection--multiple {
