just design of three index

--- a/SSK_ERP/SSK_ERP/Views/Groups/GroupRoles.cshtml
+++ b/SSK_ERP/SSK_ERP/Views/Groups/GroupRoles.cshtml
@@ -12,6 +12,11 @@
         r.RoleName.Contains("PurchaseOrder") ||
         r.RoleName.Contains("PurchaseReturn") ||
         r.RoleName.Contains("SalesReturn") ||
+        r.RoleName.Contains("CreditNoteReport") ||
+        r.RoleName.Contains("DebitNoteReport") ||
+        r.RoleName.Contains("SMADispatchReport") ||
+        r.RoleName.Contains("SalesReportItemwise") ||
+        r.RoleName.Contains("ServiceLevelReport") ||
         r.RoleName.Contains("Print")
     ).ToList();
     
