--- a/SSK_ERP/SSK_ERP/Views/SalesOrderReport/Index.cshtml
+++ b/SSK_ERP/SSK_ERP/Views/SalesOrderReport/Index.cshtml
@@ -341,6 +341,7 @@
 
             var consolidatedExportUrl = '@Url.Action("ExportDatewiseConsolidated", "SalesOrderReport")';
             var detailedExportUrl = '@Url.Action("ExportDatewiseDetailed", "SalesOrderReport")';
+            var pendingConsolidatedExportUrl = '@Url.Action("ExportDatewisePendingConsolidated", "SalesOrderReport")';
             var cwConsolidatedExportUrl = '@Url.Action("ExportCustomerwiseConsolidated", "SalesOrderReport")';
             var cwDetailedExportUrl = '@Url.Action("ExportCustomerwiseDetailed", "SalesOrderReport")';
 
@@ -425,6 +426,8 @@
                 var baseUrl = consolidatedExportUrl;
                 if (mode === 'detailed') {
                     baseUrl = detailedExportUrl;
+                } else if (mode === 'pending') {
+                    baseUrl = pendingConsolidatedExportUrl;
                 }
 
                 var url = baseUrl
